# ads111x

./: README.md  pyproject.toml
ads111x/: __main__.py  common.py  config.py  conversion.py  log.py  single_shot.py  threshold.py
